--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	--page-text-color: #d3d3d3;
 	--font-color: #d3d3d3;
 	--page-bgc: #0b1124;
-	--body-bgc: #22242b;
+	--body-bgc: #2b2a33;
 }
 body {
 	background-color: var(--page-bgc);
