--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 :root {
 	--color: #d3d3d3;
 	--page-text-color: #d3d3d3;
-	--page-bgc: #0b1124;
 	--body-bgc: #2b2a33;
 }
 body {
-	background-color: var(--page-bgc);
+	background-color: var(--body-bgc);
 	background-image: radial-gradient(ellipse at right bottom, rgba(11, 17, 108, 0.8) 0%, rgba(11, 17, 108, 0.3) 25%, rgba(11, 17, 108, 0) 60%), linear-gradient(to top, rgba(11, 17, 36, 0.2) 30%, rgba(11, 17, 36, 0.4) 60%, rgba(11, 17, 36, 1) 100%);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
 }
-.title {
-	color: #d2d2d2;
+.title, .window, .center {
+	color: #d3d3d3;
 	font-family: 'Courier New', Courier, monospace;
-	font-size: 2em;
+	font-size: 2.5em;
 }
