--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 :root {
-	--page-text-color: #d3d3d3;
+	--txtcol: #d3d3d3;
+	--bgcol: black;
 }
 
 body {
 	font-family: 'Courier New', Courier, monospace;
 	font-optical-sizing: auto;
 	font-style: normal;
-	color: #d3d3d3;
-	background-color: black;
+	color: var(--txtcol);
 	/* background-image: url("header.png"); */
+	background-color: var(--bgcol);
 	background-size: contain;
 	background-position: center center;
 	background-attachment: scroll;
 }
 
-.title { font-size: 3em; }
-}
+.title {font-size: 3em;}
+
+.small-text {font-size: 0.5em;}
