--- a/style.css
+++ b/style.css
@@ -2,19 +2,20 @@
 	--txtcol: #d3d3d3;
 	--bgcol: black;
 }
-
+.title {font-size: 3em;}
+.intro {
+	font-size: 0.9em;
+	padding-bottom: 300px;
+}
+.banner-img {border: solid 1px #fff;}
 body {
+	background-color: var(--bgcol);
+	color: var(--txtcol);
 	font-family: 'Courier New', Courier, monospace;
 	font-optical-sizing: auto;
 	font-style: normal;
-	color: var(--txtcol);
-	/* background-image: url("header.png"); */
-	background-color: var(--bgcol);
-	background-size: contain;
+   background-image: url("images/bg_dark.png");
+	background-size: cover;
 	background-position: center center;
 	background-attachment: scroll;
 }
-
-.title {font-size: 3em;}
-
-.small-text {font-size: 0.5em;}
