--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 	--linkcol: #4493f8;
 }
 body {
-	width: 75%;
+	width: 80%;
 	max-width: 1080px;
-	padding-bottom: 50px;
+	padding-bottom: 100px;
 	margin: 0 auto;
 	color: var(--txtcol);
 	background-color: var(--bgcol);
@@ -31,6 +31,18 @@ main a:hover:not(.link-img) {
 }
 code{
 	font-family: monospace;
+}
+footer{
+	position: fixed;
+	bottom: 0;
+	right: 1.5%;
+}
+.header{
+	font-size: 0.75em;
+	opacity: 50%;
+	position: absolute;
+	top: 6.7%;
+	right: 15%;
 }
 .window {
 	display: block;
@@ -61,9 +73,4 @@ code{
 }
 .button:active {
 	border-color: #808080 #ffffff #ffffff #808080;
-}
-footer{
-	position: fixed;
-	bottom: 0;
-	right: 20px;
 }
