--- a/assets/style.css
+++ b/assets/style.css
@@ -9,9 +9,15 @@
 	--bgcol: black;
 	--linkcol: #4493f8;
 }
+
+html {
+	margin: 0;
+	padding: 0;
+}
 body {
 	width: 80%;
 	max-width: 1080px;
+	padding: 0;
 	padding-bottom: 100px;
 	margin: 0 auto;
 	color: var(--txtcol);
@@ -24,25 +30,37 @@ body {
 	background-position: center center;
 	background-attachment: fixed;
 }
+
 main a:link{
 	color: #4447f8;
 }
 main a:visited:not(.link-img) {
 	color: var(--linkcol);
 }
-
 main a:hover:not(.link-img) {
 	color: var(--linkcol);
 	text-decoration: none;
 }
+
+canvas { 
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	z-index: -1;
+}
+
 code{
 	font-family: monospace;
 }
+
 footer{
 	position: fixed;
 	bottom: 0;
 	right: 1.5%;
 }
+
 .header-small{
 	font-size: 0.75em;
 	opacity: 50%;
@@ -50,27 +68,33 @@ footer{
 	top: 6.7%;
 	right: 15%;
 }
+
 .window {
 	display: block;
 	margin: 50px 0;
 	text-align: left;
 }
+
 .top-bullet{
 	padding: 0px 10px 20px 20px;
 	line-height: 1.5em;
 }
+
 .top-links{
 	padding: 0px 10px 20px 20px;
 	line-height: 1em;
 }
+
 .fomula{
 	position: absolute;
 	top: 150px;
 	right: 100px;
 }
+
 .link-img {
 	color: var(--txtcol);
 }
+
 .button {
 	color: black;
 	background-color: black;
