--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100..900&family=Zen+Kaku+Gothic+New&family=Ubuntu+Sans+Mono:wght@500&display=swap');
-/* ↑これlocalにする */
-@font-face {
-	font-family: "l-safe", "calibri", "YuGothic", "Yu Gothic", "Font Awesome 5 Free", "Font Awesome 5 Brands", "Roboto", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-	src:local("Bahnschrift"), local("DIN"), local("ＭＳ Ｐゴシック"), local("MS PGothic");
-}
 :root {
 	--txtcol: white;
 	--bgcol: black;
@@ -14,6 +8,7 @@ html {
 	margin: 0;
 	padding: 0;
 }
+
 body {
 	width: 80%;
 	max-width: 1080px;
@@ -25,7 +20,7 @@ body {
 	font-family: "Courier", "Courier New", monospace, "Ubuntu Sans Mono", monospace, "l-safe", "calibri", "YuGothic", "Yu Gothic", "Font Awesome 5 Free", "Font Awesome 5 Brands", "Roboto", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
-   background-image: url("../images/bg_dark.png");
+   background-image: url("../images/bg_darker.png");
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
@@ -62,17 +57,13 @@ footer{
 }
 
 .header-small{
-	font-size: 0.75em;
-	opacity: 50%;
 	position: absolute;
-	top: 6.7%;
-	right: 15%;
-}
-
-.window {
-	display: block;
-	margin: 50px 0;
-	text-align: left;
+	top: 6.5em;
+	right: 2em;
+	opacity: 15%;
+	color: #fff;
+	font-size: 0.75em;
+	text-decoration: none;
 }
 
 .top-bullet{
