--- a/assets/style.css
+++ b/assets/style.css
@@ -20,13 +20,13 @@ body {
 	font-family: "Courier", "Courier New", monospace, "Ubuntu Sans Mono", monospace, "l-safe", "calibri", "YuGothic", "Yu Gothic", "Font Awesome 5 Free", "Font Awesome 5 Brands", "Roboto", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
-   background-image: url("../images/bg_darker.png");
+    background-image: url("../images/bg_darker.png");
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
 }
 
-main a:link{
+main a:link {
 	color: #4447f8;
 }
 main a:visited:not(.link-img) {
@@ -46,17 +46,17 @@ canvas {
 	z-index: -1;
 }
 
-code{
+code {
 	font-family: monospace;
 }
 
-footer{
+footer {
 	position: fixed;
 	bottom: 0;
 	right: 1.5%;
 }
 
-.header-small{
+.header-small {
 	position: absolute;
 	top: 6.5em;
 	right: 2em;
@@ -66,17 +66,26 @@ footer{
 	text-decoration: none;
 }
 
-.top-bullet{
-	padding: 0px 10px 20px 20px;
-	line-height: 1.5em;
+.common-head {
+	font-size: 2.5em;
+	margin: 1.3em 1em 1em 0;
 }
 
-.top-links{
-	padding: 0px 10px 20px 20px;
-	line-height: 1em;
+.top-bullet {
+	padding: 0px 20px 20px;
+	line-height: 2em;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 
-.fomula{
+.ul-sec {
+	padding: 5px 20px;
+	line-height: 0.9em;
+	font-size: 0.75em;
+	font-weight: normal;
+}
+
+.fomula {
 	position: absolute;
 	top: 150px;
 	right: 100px;
