--- a/assets/fusen.css
+++ b/assets/fusen.css
@@ -9,46 +9,8 @@ body {
     margin: 0;
     color: white;
     background-color: black;
-    font-family:"游明朝" , serif;
+    font-family:"游明朝", serif;
     padding: 50px;
-}
-
-body::after {
-    content: "";
-    position: fixed;
-    width: calc(100% + 10px);
-    height: calc(100% + 10px);
-    -webkit-backdrop-filter: blur(12px) opacity(23%) saturate(50%);
-    backdrop-filter: blur(16px) opacity(23%) saturate(50%);
-    top: -5px;
-    left: -5px;
-    margin: auto;
-    z-index: 5;
-    pointer-events: none;
-}
-
-main a:link{
-	color: blue;;
-}
-main a:visited:not(.link-img) {
-	color: var(--linkcol);
-}
-main a:hover:not(.link-img) {
-	color: var(--linkcol);
-	text-decoration: none;
-}
-
-canvas { 
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	z-index: -1;
-}
-
-code{
-	font-family: monospace;
 }
 
 footer{
@@ -56,37 +18,27 @@ footer{
 	bottom: 0;
 	right: 1.5%;
 }
-
-.header-small{
-	font-size: 0.75em;
-	opacity: 50%;
-	position: absolute;
-	top: 6.7%;
-	right: 15%;
+footer a:link {
+    color: white;
+	text-decoration: none;
 }
-
-.window {
-	display: block;
-	margin: 50px 0;
-	text-align: left;
-}
-
-.top-bullet{
-	padding: 0px 10px 20px 20px;
-	line-height: 1.5em;
-}
-
-.top-links{
-	padding: 0px 10px 20px 20px;
-	line-height: 1em;
-}
-
-.link-img {
-	color: var(--txtcol);
+footer a:hover {
+    text-decoration: underline;
 }
 
 .introduction {
     height: 50%;
+}
+.introduction a:link{
+	color: #4040ff;
+	text-decoration: none;
+}
+.introduction a:visited:not(.link-img) {
+	color: #4040ff;
+}
+.introduction a:hover:not(.link-img) {
+	color: #4040ff;
+	text-decoration: underline;
 }
 
 .output-box {
@@ -99,6 +51,17 @@ footer{
     white-space: pre-wrap;
     text-align: center;
     margin: 0 auto;
+}
+#output a:link {
+	color: white;
+	text-decoration: none;
+}
+#output a:visited:not(.link-img) {
+	color: white;
+}
+#output a:hover:not(.link-img) {
+	color: white;
+	text-decoration: underline;
 }
 
 .words {
@@ -128,15 +91,4 @@ footer{
     text-align: right;
     margin-top: 20px;
     font-size: 0.8em;
-}
-
-main {
-    height: 100%;
-    margin: 5px;
-}
-
-header {
-    margin: 0 auto;
-    align-self: center;
-    overflow: hidden;
 }
