--- a/assets/fusen.css
+++ b/assets/fusen.css
@@ -47,7 +47,7 @@ footer a:hover {
 }
 
 #output {
-    width: 52%;
+    width: 55%;
     white-space: pre-wrap;
     text-align: center;
     margin: 0 auto;
@@ -65,12 +65,13 @@ footer a:hover {
 }
 
 .words {
+    font-size: 1.75em;
     text-align: left;
-    font-size: 1.8em;
 }
 
 .trans {
-    margin-bottom: 1.5em;
+    text-align: left;
+    margin: .5em auto 1.5em;
 }
 
 .type {
@@ -84,11 +85,11 @@ footer a:hover {
 
 .sub {
     text-align: right;
-    font-size: 0.8em;
+    font-size: .8em;
 }
 
 .context {
     text-align: right;
     margin-top: 20px;
-    font-size: 0.8em;
+    font-size: .8em;
 }
