--- a/assets/fusen.css
+++ b/assets/fusen.css
@@ -64,32 +64,35 @@ footer a:hover {
 	text-decoration: underline;
 }
 
+.words,
+.trans {
+    text-align: left;
+}
+
 .words {
     font-size: 1.75em;
-    text-align: left;
 }
 
 .trans {
-    text-align: left;
     margin: .5em auto 1.5em;
 }
 
-.type {
+.type,
+.source,
+.sub,
+.context {
     text-align: right;
+}
+
+.type {
     color: #999;
 }
 
-.source {
-    text-align: right;
-}
-
 .sub {
-    text-align: right;
     font-size: .8em;
 }
 
 .context {
-    text-align: right;
     margin-top: 20px;
     font-size: .8em;
 }
