--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ body {
 	margin: 0 auto;
 	color: var(--txtcol);
 	background-color: var(--bgcol);
-	font-family: "Courier", "Courier New", monospace;
+	font-family: "Courier", "Courier New", "Courier Prime", monospace;
     background-image: url("../images/bg_dark.jpg");
 	background-size: cover;
 	background-position: center center;
